k8s/chatbot-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-server-deployment
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      backend: chatbot-server
  template:
    metadata:
      labels:
        backend: chatbot-server
    spec:
      containers:
      - name: server
        image: abbottqwq/chatbot-server
        resources:
          requests:
            memory: "32Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
