k8s/message-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-controller-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      backend: message-controller
  template:
    metadata:
      labels:
        backend: message-controller
    spec:
      containers:
      - name: message-controller
        image: abbottqwq/message-controller
        resources:
          requests:
            memory: "32Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
