k8s/mongo-deplyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  namespace: api
  labels:
    rule: database
spec:
  selector:
    matchLabels:
      component: mongo
  template:
    metadata:
      labels:
        component: mongo
    spec:
      containers:
        - name: mongo
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: storage
              mountPath: /data/db
              subPath: mongo
          resources:
            limits:
              cpu: "0.1"
              memory: 500Mi
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
