k8s/mongo-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-worker-deployment
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      api: mongo-worker
  template:
    metadata:
      labels:
        api: mongo-worker
    spec:
      containers:
      - name: mongo-worker
        image: abbottqwq/mongo-worker
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 27017
