k8s/chatbot-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-api-service
  namespace: api
  labels:
    rule: api
spec:
  type: ClusterIP
  selector:
    app: chatbot-api
  ports:
  - port: 5000
    targetPort: 5000
