k8s/chatbot-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-client
  namespace: server
spec:
  type: ClusterIP
  selector:
    frontend: chatbot-client
  ports:
    - port: 3000
      targetPort: 3000
