k8s/chatbot-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-server
  namespace: server
  labels:
    rule: backend
spec:
  type: ClusterIP
  selector:
    backend: chatbot-server
  ports:
  - port: 5000
    targetPort: 5000
