k8s/message-controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: message-controller-service
spec:
  type: ClusterIP
  selector:
    backend: message-controller
  ports:
  - port: 5000
    targetPort: 5000
