k8s/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: api
  labels:
    rule: database
spec:
  selector:
    component: mongo
  ports:
    - port: 27017
      targetPort: 27017
