k8s/mongo-worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-worker-service
  namespace: api
  labels:
    rule: api
spec:
  selector:
    api: mongo-worker 
  ports:
  - port: 5000
    targetPort: 5000
