k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: api
  labels:
    rule: database
spec:
  type: ClusterIP
  selector:
    component: redis
  ports:
  - port: 6379
    targetPort: 6379
